--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -35,16 +35,20 @@
             android:layout_marginTop="16dp">
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/parent_card"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="180dp"
                 android:layout_weight="1"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
-                android:layout_margin="8dp">
+                android:layout_margin="8dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:padding="16dp"
                     android:gravity="center">
@@ -60,27 +64,24 @@
                         android:layout_marginTop="8dp"
                         android:text="Parent looking for child care"
                         android:textAlignment="center" />
-
-                    <Button
-                        android:id="@+id/find_child_care_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:text="Find child care providers" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/provider_card"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="180dp"
                 android:layout_weight="1"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
-                android:layout_margin="8dp">
+                android:layout_margin="8dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:padding="16dp"
                     android:gravity="center">
@@ -96,27 +97,24 @@
                         android:layout_marginTop="8dp"
                         android:text="AFSCME Provider looking for resources"
                         android:textAlignment="center" />
-
-                    <Button
-                        android:id="@+id/member_resources_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:text="Member Resources" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
 
             <androidx.cardview.widget.CardView
+                android:id="@+id/join_card"
                 android:layout_width="0dp"
-                android:layout_height="wrap_content"
+                android:layout_height="180dp"
                 android:layout_weight="1"
                 app:cardCornerRadius="8dp"
                 app:cardElevation="4dp"
-                android:layout_margin="8dp">
+                android:layout_margin="8dp"
+                android:clickable="true"
+                android:focusable="true"
+                android:foreground="?android:attr/selectableItemBackground">
 
                 <LinearLayout
                     android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
+                    android:layout_height="match_parent"
                     android:orientation="vertical"
                     android:padding="16dp"
                     android:gravity="center">
@@ -132,13 +130,6 @@
                         android:layout_marginTop="8dp"
                         android:text="Child Care Provider looking to join AFSCME"
                         android:textAlignment="center" />
-
-                    <Button
-                        android:id="@+id/become_union_provider_button"
-                        android:layout_width="wrap_content"
-                        android:layout_height="wrap_content"
-                        android:layout_marginTop="8dp"
-                        android:text="Become a union provider" />
                 </LinearLayout>
             </androidx.cardview.widget.CardView>
         </LinearLayout>
