--- a/app/src/main/res/layout/fragment_home.xml
+++ b/app/src/main/res/layout/fragment_home.xml
@@ -17,8 +17,8 @@
             android:layout_width="100dp"
             android:layout_height="100dp"
             android:layout_gravity="center_horizontal"
-            android:src="@drawable/logo"
-            android:contentDescription="@string/logo_description" />
+            android:contentDescription="@string/logo_description"
+            android:src="@drawable/occpt_app_icon_5" />
 
         <TextView
             android:layout_width="wrap_content"
