--- a/app/src/main/res/layout/fragment_login.xml
+++ b/app/src/main/res/layout/fragment_login.xml
@@ -73,19 +73,26 @@
             android:layout_marginTop="16dp"
             android:text="LOGIN" />
 
-        <Button
+        <ImageButton
             android:id="@+id/facebook_login_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="382dp"
+            android:layout_height="59dp"
+            android:layout_gravity="center_horizontal"
+            android:scaleType="fitCenter"
             android:layout_marginTop="8dp"
-            app:icon="@drawable/ic_facebook_login" />
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/facebook_login_description"
+            android:src="@drawable/ic_facebook_login" />
 
-        <Button
+        <ImageButton
             android:id="@+id/google_login_button"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_width="300dp"
+            android:layout_height="43dp"
+            android:layout_gravity="center_horizontal"
             android:layout_marginTop="8dp"
-            app:icon="@drawable/ic_google_login" />
+            android:background="?attr/selectableItemBackgroundBorderless"
+            android:contentDescription="@string/google_login_description"
+            android:src="@drawable/ic_google_login" />
 
         <TextView
             android:id="@+id/privacy_policy_link"
