--- a/app/src/main/res/navigation/mobile_navigation.xml
+++ b/app/src/main/res/navigation/mobile_navigation.xml
@@ -11,6 +11,11 @@
         android:label="@string/menu_login"
         tools:layout="@layout/fragment_login" />
     <fragment
+        android:id="@+id/nav_registration"
+        android:name="org.oregonccpt.occpt.ui.registration.RegistrationFragment"
+        android:label="@string/menu_login"
+        tools:layout="@layout/fragment_registration" />
+    <fragment
         android:id="@+id/loginFragment"
         android:name="org.oregonccpt.occpt.ui.login.LoginFragment"
         android:label="fragment_login"
